@@ -205,6 +205,8 @@ Bug Fixes
 * SOLR-16983: Fixed a bug that could cause some usages of SolrStream to fail to close InputStreams from the server.
   Also fixed the usage of ObjectReleaseTracker in SolrTestCaseJ4 to catch these kinds of bugs (hossman)
 
+* SOLR-16925: Fix indentation for JacksonJsonWriter (Houston Putman)
+
 Dependency Upgrades
 ---------------------
 
